update requirements.txt for some documentation packages installed

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,8 @@ pyserial~=3.5
 scipy ~= 1.7.0
 h5py ~= 3.3.0
 numpy ~= 1.21.1
+sphinx==1.6.7
+livereload
+autodoc
+sphinx-autodoc-typehints
+sphinx-autobuild
